# backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  lint-and-commit.yml
alembic/: env.py
alembic/versions/: 01b8635ffbc5_complete_initial_setup.py  0a01c9682ff0_change_types_from_pydantic_uuids_to_.py  15a091196cf4_init_schema.py  16bc6a0b5660_add_indexing_jobs.py  4d319c302581_add_users_table.py  50d20e9077b1_add_roles_table.py  9bf577fdff61_initial_structure.py  a565d659689d_initial_full_setup.py  b1ec3596c902_add_password_field.py  bc62d80962c0_init_full_structure.py
src/: main.py
src/api/: dependencies.py
src/api/routers/: admin.py  auth.py  chat.py  indexing.py  repository.py
src/api/schemas/: admin.py  auth.py  chat.py  repository.py
src/application/services/: __init__.py  admin_service.py  auth_service.py  chat_service.py  index_service.py
src/core/: security_policy.py  settings.py
src/domain/models/: chat.py  knowledge.py  user.py
src/domain/repositories/: __init__.py  cache_repo.py  chat_repo.py  gitlab_repo.py  job_repo.py  role_repo.py  user_repo.py
src/infrastructure/cache/repositories/: redis_cache_repo.py
src/infrastructure/db/: session.py
src/infrastructure/db/models/: __init__.py  base.py  chat.py  gitlab.py  job.py  role.py  user.py
src/infrastructure/db/repositories/: __init__.py  sqlalchemy_chat_repo.py  sqlalchemy_gitlab_repo.py  sqlalchemy_job_repo.py  sqlalchemy_role_repo.py  (+1 more)
src/infrastructure/di/: providers.py
src/infrastructure/security/: encription.py  jwt.py  password.py
tests/: conftest.py
tests/api/: test_admin_router.py  test_auth_router.py  test_chat_router.py  test_indexing_router.py  test_repository_router.py
tests/integration/: test_chat_repo.py  test_gitlab_repo.py  test_job_repo.py  test_role_repo.py  test_user_repo.py
tests/unit/: test_admin_service.py  test_auth_service.py  test_chat_service.py  test_index_service.py  test_permission_checker.py
