[project]
name = "backend"
version = "0.1.0"
description = "The Yellow Sign backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.1",
    "uvicorn[standard]>=0.38.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "B", "Q", "S", "I", "D"]
ignore = [
    # Docstring rules
    "D100", "D104", "D105", "D107", "D211",
    # Formatting & spacing
    "D213",
    # Function call in argument defaults
    "B008"
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
